# rusticate

./: .env  Cargo.toml  README.md  chatgpt_log.md  rusticate.db  sync_context.sh
migrations/0001_create_todo_items_table/: up.sql
src/: db.rs  error.rs  handlers.rs  main.rs  models.rs  schema.rs
